Modified `/phoneNumber` endpoint to return a single company